# terrane

./: .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTION.md  Cargo.toml  IMPLEMENTATION_NOTES_app-update.md  IMPLEMENTATION_NOTES_applescript.md  IMPLEMENTATION_NOTES_automation.md  IMPLEMENTATION_NOTES_backup-export.md  IMPLEMENTATION_NOTES_blob.md  IMPLEMENTATION_NOTES_browser.md  IMPLEMENTATION_NOTES_builder.md  IMPLEMENTATION_NOTES_capture.md  IMPLEMENTATION_NOTES_common.md  IMPLEMENTATION_NOTES_compaction.md  IMPLEMENTATION_NOTES_connection.md  IMPLEMENTATION_NOTES_deep-links.md  IMPLEMENTATION_NOTES_document.md  IMPLEMENTATION_NOTES_geo.md  IMPLEMENTATION_NOTES_history.md  IMPLEMENTATION_NOTES_interop.md  IMPLEMENTATION_NOTES_job.md  IMPLEMENTATION_NOTES_mcp.md  IMPLEMENTATION_NOTES_media.md  IMPLEMENTATION_NOTES_migration.md  IMPLEMENTATION_NOTES_model.md  IMPLEMENTATION_NOTES_native.md  IMPLEMENTATION_NOTES_net.md  IMPLEMENTATION_NOTES_org.md  IMPLEMENTATION_NOTES_person.md  IMPLEMENTATION_NOTES_presence.md  IMPLEMENTATION_NOTES_publish.md  IMPLEMENTATION_NOTES_push.md  IMPLEMENTATION_NOTES_query.md  IMPLEMENTATION_NOTES_scheduler.md  IMPLEMENTATION_NOTES_share.md  IMPLEMENTATION_NOTES_stream.md  IMPLEMENTATION_NOTES_sync.md  (+22 more)
forge/: Cargo.toml
forge/contracts/: public-contract.schema.json
forge/corpus/injection/: benign_markdown_code.json  benign_secret_word.json  fake_human_approval_marker.json  fake_stack_trace.json  install_without_review.json  private_network_ssrf_lure.json  prompt_says_owner_role.json  split_payload_part2.json  yaml_frontmatter_mimic.json
forge/crates/cli/: Cargo.toml
forge/crates/controlcore/: REMAINING-SHELLS.md
forge/crates/core/: Cargo.toml
forge/crates/crdt/: Cargo.toml
forge/crates/domain/: Cargo.toml
forge/crates/ffi/: Cargo.toml
forge/crates/pipeline/: Cargo.toml
forge/crates/policy/: Cargo.toml
forge/crates/runtime/: Cargo.toml
forge/crates/schema/: Cargo.toml
forge/crates/secrets/: Cargo.toml
forge/crates/server/: Cargo.toml
forge/crates/signing/: Cargo.toml
forge/crates/storage/: Cargo.toml
forge/crates/sync/: Cargo.toml
forge/crates/ui/: Cargo.toml
forge/data/: app-status-enums.json  bundled-apps.json  commands.json  package-manifest.json  runtime-config.json  tables.json
forge/docs/: applet-authoring-guide.md  architecture-overview.md  example-applets.md  public-api-reference.md
forge/docs/public-api/: index.html  styles.css
forge/examples/api-dashboard/: manifest.json
forge/examples/calendar-planner/: manifest.json
forge/examples/core-replay-lab/: manifest.json
forge/examples/file-transformer/: manifest.json
forge/examples/notes-lite/: manifest.json
forge/examples/task-workbench/: manifest.json
forge/fixtures/audit-log-e2e/: append_only_rerun_adds_rows.json  command_rbac_denial_query_actor.json  network_egress_metadata_no_body.json  permission_grant_revoke_ordered_rows.json  secret_access_redacted.json  signed_install_refusal_unknown_field.json
forge/fixtures/bridge-security/: envelope_permission_denied.json  manifest.json  record_ids_deterministic.json
forge/fixtures/compat/: current_version_full.json  deleted_tombstone.json  future_unknown_fields.json
forge/fixtures/conformance/: memory_limit.json  pure_compute.json  random_sequence.json  storage_roundtrip.json  time_sequence.json
forge/fixtures/conformance-engines/: array_sort_stability.json  bigint_arithmetic.json  date_under_seeded_clock.json  error_message_normalized.json  json_stringify_ordering_escaping.json  map_set_iteration_order.json  math_determinism_no_random.json  number_formatting_edges.json  parse_int_float_edges.json  property_enumeration_order.json  recursion_stack_limit.json  regexp_unicode_lookbehind.json  string_locale_and_radix.json  try_finally_microtask_order.json  typed_array_arraybuffer.json  unicode_string_normalization.json
forge/fixtures/crdt-write/: empty_collection_rebuild.json  insert_patch_delete_rebuild.json  insert_read_rebuild.json
forge/fixtures/demo-notes-lite/: manifest.json
forge/fixtures/export/: workspace_with_run_logs_descriptor.json
forge/fixtures/files/: deterministic_replay_recorded_read.json  manifest.json  missing_file_not_found.json  nested_allowed_read.json
forge/fixtures/indexes/: deprecated_index_no_longer_used.json  fts_text_search_uses_shadow_table.json  fts_text_search_with_filter_and_limit.json  indexed_range_uses_expression_index.json  manifest.json
forge/fixtures/lifecycle/: enable_then_run_dispatches_event.json  manifest.json  reenable_resumes_dispatch.json  reinstall_same_code_hash_noop.json  run_uninstalled_rejected.json  suspend_already_suspended_idempotent.json  upgrade_failure_rolls_back.json
forge/fixtures/live-queries/: insert_watched_collection_notify.json  manifest.json  monotonic_version_increments.json  replay_records_notifications_identically.json  transact_coalesced_notify.json  unwatch_stops_notifications.json  update_watched_collection_notify.json
forge/fixtures/live-queries-e2e/: filtered_enter_then_leave_same_transaction_no_notify.json  monotonic_versions_and_shared_transaction_version.json  rollback_discards_dirty_set_no_notify.json  transact_three_records_two_collections_coalesces.json  watch_registered_after_mutation_has_no_history.json
forge/fixtures/migrations/: add_index_not_expressible_planned.json  deprecate_field_ok.json  duplicate_field_name_rejected.json  enforce_missing_field_rejected.json  (+4 more)
forge/spec/: accessibility.md  applet-lifecycle.md  audit-log.md  capabilities.md  commands.md  conformance-vector-format.md  crdt-write-path.md  cross-engine-conformance.md  dynamic-indexes.md  live-queries.md  migrations.md  policy-gates.md  query-dsl.md  quotas.md  resources.md  sync-protocol.md  sync-rbac.md  time-travel.md  workspace-export-format.md
forge/std/: README.md  forge-std.d.ts
host/cli/: Cargo.toml
host/mcp/: Cargo.toml
host/web/: Cargo.toml
native/linux/: Dockerfile  README.md  meson.build
native/windows/: CMakeLists.txt  README.md
rust/: Cargo.toml
terrane-core/: Cargo.toml
(+3087 files in other folders)
