[workspace]
resolver = "2"
members = [
  "rust/crates/terrane-cap-interface",
  "rust/crates/terrane-cap-agent",
  "rust/crates/terrane-cap-app",
  "rust/crates/terrane-cap-auth",
  "rust/crates/terrane-cap-build",
  "rust/crates/terrane-cap-builder",
  "rust/crates/terrane-cap-crdt",
  "rust/crates/terrane-cap-crypto",
  "rust/crates/terrane-cap-harness",
  "rust/crates/terrane-cap-kv",
  "rust/crates/terrane-cap-js-runtime",
  "rust/crates/terrane-cap-local-model",
  "rust/crates/terrane-cap-relational-db",
  "rust/crates/terrane-cap-search",
  "rust/crates/terrane-cap-model",
  "rust/crates/terrane-cap-native",
  "rust/crates/terrane-cap-stt",
  "rust/crates/terrane-cap-net",
  "rust/crates/terrane-cap-replica",
  "rust/crates/terrane-cap-sysinfo",
  "rust/crates/terrane-cap-wasm-runtime",
  "rust/crates/terrane-core",
  "rust/crates/terrane-host",
  "rust/crates/terrane-api",
  "rust/crates/terrane-app-build",
  "rust/crates/terrane-i18n",
  "rust/crates/terrane-local-llm",
  "rust/crates/terrane-asr",
  "host/cli",
  "host/mcp",
  "host/web",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
terrane-core = { path = "rust/crates/terrane-core" }
terrane-cap-interface = { path = "rust/crates/terrane-cap-interface" }
terrane-cap-agent = { path = "rust/crates/terrane-cap-agent" }
terrane-cap-app = { path = "rust/crates/terrane-cap-app" }
terrane-cap-auth = { path = "rust/crates/terrane-cap-auth" }
terrane-cap-build = { path = "rust/crates/terrane-cap-build" }
terrane-cap-builder = { path = "rust/crates/terrane-cap-builder" }
terrane-cap-crdt = { path = "rust/crates/terrane-cap-crdt" }
terrane-cap-crypto = { path = "rust/crates/terrane-cap-crypto" }
terrane-cap-harness = { path = "rust/crates/terrane-cap-harness" }
terrane-cap-kv = { path = "rust/crates/terrane-cap-kv" }
terrane-cap-js-runtime = { path = "rust/crates/terrane-cap-js-runtime" }
terrane-cap-local-model = { path = "rust/crates/terrane-cap-local-model" }
terrane-cap-relational-db = { path = "rust/crates/terrane-cap-relational-db" }
terrane-cap-search = { path = "rust/crates/terrane-cap-search" }
terrane-cap-model = { path = "rust/crates/terrane-cap-model" }
terrane-cap-native = { path = "rust/crates/terrane-cap-native" }
terrane-cap-stt = { path = "rust/crates/terrane-cap-stt" }
terrane-cap-net = { path = "rust/crates/terrane-cap-net" }
terrane-cap-replica = { path = "rust/crates/terrane-cap-replica" }
terrane-cap-sysinfo = { path = "rust/crates/terrane-cap-sysinfo" }
terrane-cap-wasm-runtime = { path = "rust/crates/terrane-cap-wasm-runtime" }
terrane-host = { path = "rust/crates/terrane-host" }
terrane-api = { path = "rust/crates/terrane-api" }
terrane-app-build = { path = "rust/crates/terrane-app-build" }
terrane-i18n = { path = "rust/crates/terrane-i18n" }
terrane-local-llm = { path = "rust/crates/terrane-local-llm" }
terrane-asr = { path = "rust/crates/terrane-asr" }
whisper-rs = "0.16"
hound = "3.5"
borsh = { version = "1", features = ["derive"] }
# Local inference edge engine only; never a dependency of the deterministic core.
llama-cpp-2 = "0.1"
libc = "0.2"
ureq = "2"
# JSON path only; no binary/ron/toml. borsh stays the event-log format. This
# only reads hand-authored bundle manifests at the edge.
nanoserde = { version = "0.2", default-features = false, features = ["json"] }
rocksdb = { version = "0.24.0", default-features = false, features = ["bindgen-runtime"] }
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
tempfile = "3"

[profile.dev]
debug = 1
