[workspace]
resolver = "2"
members = [
  "crates/domain",
  "crates/storage",
  "crates/crdt",
  "crates/sync",
  "crates/schema",
  "crates/policy",
  "crates/secrets",
  "crates/signing",
  "crates/runtime",
  "crates/pipeline",
  "crates/ui",
  "crates/core",
  "crates/ffi",
  "crates/cli",
  "crates/testkit",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tempfile = "3"
sha2 = "0.10"
base64 = { version = "0.22", default-features = false, features = ["alloc"] }
forge-domain = { path = "crates/domain" }
forge-storage = { path = "crates/storage" }
forge-crdt = { path = "crates/crdt" }
forge-sync = { path = "crates/sync" }
forge-schema = { path = "crates/schema" }
forge-policy = { path = "crates/policy" }
forge-secrets = { path = "crates/secrets" }
forge-signing = { path = "crates/signing" }
forge-runtime = { path = "crates/runtime" }
forge-pipeline = { path = "crates/pipeline" }
forge-ui = { path = "crates/ui" }
forge-core = { path = "crates/core" }
forge-ffi = { path = "crates/ffi" }
forge-testkit = { path = "crates/testkit" }

[profile.dev]
debug = 1
