[workspace]
resolver = "2"
members = [
  "crates/terrane-cap-interface",
  "crates/terrane-cap-app",
  "crates/terrane-cap-build",
  "crates/terrane-cap-builder",
  "crates/terrane-cap-crdt",
  "crates/terrane-cap-harness",
  "crates/terrane-cap-kv",
  "crates/terrane-cap-js-runtime",
  "crates/terrane-cap-relational-db",
  "crates/terrane-cap-model",
  "crates/terrane-cap-net",
  "crates/terrane-cap-replica",
  "crates/terrane-cap-wasm-runtime",
  "crates/terrane-core",
  "crates/terrane-host",
  "crates/terrane-api",
  "crates/terrane-app-build",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
terrane-core = { path = "crates/terrane-core" }
terrane-cap-interface = { path = "crates/terrane-cap-interface" }
terrane-cap-app = { path = "crates/terrane-cap-app" }
terrane-cap-build = { path = "crates/terrane-cap-build" }
terrane-cap-builder = { path = "crates/terrane-cap-builder" }
terrane-cap-crdt = { path = "crates/terrane-cap-crdt" }
terrane-cap-harness = { path = "crates/terrane-cap-harness" }
terrane-cap-kv = { path = "crates/terrane-cap-kv" }
terrane-cap-js-runtime = { path = "crates/terrane-cap-js-runtime" }
terrane-cap-relational-db = { path = "crates/terrane-cap-relational-db" }
terrane-cap-model = { path = "crates/terrane-cap-model" }
terrane-cap-net = { path = "crates/terrane-cap-net" }
terrane-cap-replica = { path = "crates/terrane-cap-replica" }
terrane-cap-wasm-runtime = { path = "crates/terrane-cap-wasm-runtime" }
terrane-host = { path = "crates/terrane-host" }
terrane-app-build = { path = "crates/terrane-app-build" }
borsh = { version = "1", features = ["derive"] }
# JSON path only — no binary/ron/toml. borsh stays the event-log format; this
# only reads hand-authored bundle manifests at the edge.
nanoserde = { version = "0.2", default-features = false, features = ["json"] }
rocksdb = { version = "0.24.0", default-features = false, features = ["bindgen-runtime"] }
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
tempfile = "3"

[profile.dev]
debug = 1
