# Standalone workspace: host/cli is its own Cargo workspace (separate Cargo.lock
# and target/) so non-Rust hosts (macOS/Xcode, Android/Gradle, …) aren't
# entangled with this one's build. It path-depends across the boundary into the
# shared rust/ workspace; QuickJS comes transitively through the terrane-core
# engine crate, so this package has no direct rquickjs dependency.
[workspace]

[package]
name = "terrane-host-cli"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
default = []
sqlite-storage = ["terrane-host/sqlite-storage"]
rocksdb-storage = ["terrane-host/rocksdb-storage"]

[[bin]]
name = "terrane-host"
path = "src/main.rs"

[dependencies]
terrane-host = { path = "../../rust/crates/terrane-host" }

[dev-dependencies]
tempfile = "3"
