[package]
name = "terrane-host-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
rocksdb-storage = ["terrane-host/rocksdb-storage"]

[[bin]]
name = "terrane-host"
path = "src/main.rs"

[dependencies]
terrane-host.workspace = true

[dev-dependencies]
tempfile.workspace = true
