[package]
name = "terrane-host-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
rocksdb-storage = ["terrane-host/rocksdb-storage"]

[[bin]]
name = "terrane-mcp"
path = "src/main.rs"

[dependencies]
terrane-api.workspace = true
terrane-host.workspace = true
nanoserde.workspace = true

[dev-dependencies]
rusqlite.workspace = true
serde_json.workspace = true
tempfile.workspace = true
terrane-core.workspace = true
