[package]
name = "terrane-host-web"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
rocksdb-storage = ["terrane-host/rocksdb-storage"]

[[bin]]
name = "terrane-web"
path = "src/main.rs"

[dependencies]
terrane-api.workspace = true
terrane-host.workspace = true
nanoserde.workspace = true
tiny_http = "0.12"

[dev-dependencies]
tempfile.workspace = true
terrane-core.workspace = true
