[package]
name = "terrane-host-web"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
asr-engine = ["terrane-host/asr-engine"]
rocksdb-storage = ["terrane-host/rocksdb-storage"]

[[bin]]
name = "terrane-web"
path = "src/main.rs"

[dependencies]
terrane-api.workspace = true
terrane-core.workspace = true
terrane-host.workspace = true
terrane-cap-agent.workspace = true
terrane-cap-auth.workspace = true
nanoserde.workspace = true
tiny_http = "0.12"
tungstenite = "0.26"
ureq.workspace = true

[dev-dependencies]
tempfile.workspace = true
terrane-core.workspace = true
