[package]
name = "forge-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "forge_cli"
path = "src/lib.rs"

[[bin]]
name = "forge"
path = "src/main.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
forge-core.workspace = true
forge-domain.workspace = true
forge-runtime.workspace = true

# The data-driven fixture test (tests/scenarios.rs) drives every scenario
# THROUGH the command/event facade (forge-core via the forge-cli helpers),
# honoring each scenario's pinned seeds via the `runtime.run` seed override
# (review 032 finding 1) — no parallel pipeline/runtime/storage path. It needs
# no extra dev-dependencies beyond the crate's own deps (forge-core/forge-domain).

[dev-dependencies]
forge-runtime.workspace = true
