[package]
name = "forge-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
forge-domain.workspace = true
forge-storage.workspace = true
forge-sync.workspace = true
forge-runtime.workspace = true
forge-pipeline.workspace = true
forge-policy.workspace = true
forge-ui.workspace = true
forge-schema.workspace = true
forge-signing.workspace = true

[dev-dependencies]
tempfile.workspace = true
base64.workspace = true
