[package]
name = "forge-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "forge_ffi"
crate-type = ["cdylib", "staticlib", "rlib"]

[[bin]]
name = "core-invoke"
path = "src/bin/core_invoke.rs"

[dependencies]
forge-core = { workspace = true, features = ["control"] }
forge-domain.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
