[package]
name = "forge-pipeline"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
forge-domain.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
sha2 = "0.10"

# In-core, offline TypeScript -> JS type-strip + AST scan (prd-merged/01 CR-14).
# `swc_core` re-exports the individual `swc_ecma_*` crates behind one coordinated
# version so the parser/codegen/transform/visit trees never skew. Only the ecma
# features we use are enabled to keep the dependency footprint minimal: no
# bundler, minifier, JSX-runtime, or plugin host.
#
# CR-15 (wasm32): the enabled crates (swc_ecma_parser/ast/codegen/visit,
# swc_ecma_transforms_typescript + _base, swc_common without the `tty-emitter`
# feature) are pure-Rust and compile to `wasm32-unknown-unknown`. We deliberately
# avoid the `tty_color`/`tty-emitter` paths (which pull `atty`/termcolor) so no
# std-tty dependency reaches the wasm core.
swc_core = { version = "68", default-features = false, features = [
  "common",
  "ecma_ast",
  "ecma_parser",
  "ecma_codegen",
  "ecma_visit",
  "ecma_transforms",
  "ecma_transforms_typescript",
] }
