[package]
name = "forge-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
forge-domain.workspace = true
forge-policy.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

# rquickjs ships a native C library (QuickJS) and does NOT build for
# wasm32-unknown-unknown (prd-merged/09 M0a; reviews 002/003/004). Gate it to
# native targets so the JsEngine trait + all pure record/replay logic stay
# wasm32-clean. The QuickJsEngine impl is #[cfg(not(target_arch = "wasm32"))].
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rquickjs = "0.12"

[dev-dependencies]
forge-storage.workspace = true
serde.workspace = true
