[package]
name = "forge-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
forge-domain.workspace = true
forge-policy.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

# Pure-Rust base64 for the `bytes_base64` payloads of ctx.files read/write
# (engine-independent, byte-exact, wasm-clean). Same crate/version forge-signing
# already pins.
base64 = { version = "0.22", default-features = false, features = ["alloc"] }

# rquickjs ships a native C library (QuickJS) and does NOT build for
# wasm32-unknown-unknown (prd-merged/09 M0a; reviews 002/003/004), nor does
# rquickjs-sys ship pre-generated bindings for the iOS simulator targets used by
# the native host cutover. Gate it to targets with the built-in QuickJS backend;
# iOS exports structured PlatformUnavailable stubs until CR-12/JSC lands.
[target.'cfg(all(not(target_arch = "wasm32"), not(target_os = "ios")))'.dependencies]
rquickjs = "0.12"

[dev-dependencies]
forge-storage.workspace = true
serde.workspace = true
