[package]
name = "forge-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "forge-server"
path = "src/main.rs"

[dependencies]
forge-core.workspace = true
forge-domain.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
