[package]
name = "forge-signing"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
forge-domain.workspace = true
serde.workspace = true
serde_json.workspace = true
# Pure-Rust Ed25519 signature verification (no I/O, wasm32-unknown-unknown-clean).
# `default-features = false` drops the std-only RNG/key-generation paths we do not
# use; we only *verify*, so we need the bare verifying-key + signature decode.
ed25519-dalek = { version = "2", default-features = false }
# Pure-Rust base64 for decoding the `ed25519:<base64>` signature/key strings.
base64 = { version = "0.22", default-features = false, features = ["alloc"] }
# Pure-Rust sha2 — the canonical content/manifest/policy/permissions hashes are
# `sha256:` + lowercase-hex, matching forge-domain's `code_hash` algorithm.
sha2 = { version = "0.10", default-features = false }

[dev-dependencies]
serde_json.workspace = true
