[package]
name = "forge-storage"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
forge-domain.workspace = true
forge-crdt.workspace = true
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
# Live-query fixtures pin the schema-change behavior on a watched collection
# (T047 `schema_change_on_watched_collection_defined_behavior`): an additive
# change is accepted, a destructive drop is rejected (SchemaCompatibilityError).
# The conformance test drives the real schema engine to assert that contract.
# Dev-only — forge-schema depends solely on forge-domain, so there is no cycle.
forge-schema.workspace = true
