[package]
name = "forge-storage"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
forge-domain.workspace = true
forge-crdt.workspace = true
# The DL-13 migration driver (`Store::apply_migration`) runs the pure record
# transform engine that lives in forge-schema (MigrationDescriptor /
# migrate_record). forge-schema depends solely on forge-domain, so there is no
# dependency cycle. The same crate's schema-change engine also backs the
# live-query conformance test below.
forge-schema.workspace = true
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
