[package]
name = "forge-sync"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
forge-domain.workspace = true
forge-storage.workspace = true
forge-crdt.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true

[dev-dependencies]
forge-storage.workspace = true
