[package]
name = "terrane-cap-automation"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "terrane_cap_automation"
path = "src/lib.rs"

[dependencies]
borsh.workspace = true
serde_json.workspace = true
sha2.workspace = true
terrane-cap-auth.workspace = true
terrane-cap-interface.workspace = true
terrane-cap-kv.workspace = true
terrane-cap-query.workspace = true
