[package]
name = "terrane-cap-history"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "terrane_cap_history"
path = "src/lib.rs"

[dependencies]
terrane-cap-interface.workspace = true
borsh.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
serde_json.workspace = true
