[package]
name = "terrane-cap-interop"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "terrane_cap_interop"
path = "src/lib.rs"

[dependencies]
terrane-cap-interface.workspace = true
terrane-cap-app.workspace = true
terrane-cap-auth.workspace = true
terrane-cap-blob.workspace = true
borsh.workspace = true
serde_json.workspace = true
sha2.workspace = true
