[package]
name = "terrane-cap-kv"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "terrane_cap_kv"
path = "src/lib.rs"

[features]
default = []
rocksdb-storage = ["dep:rocksdb"]

[dependencies]
terrane-cap-interface.workspace = true
borsh.workspace = true
rocksdb = { workspace = true, optional = true }
rusqlite.workspace = true
